cli/tests/testdata/run/set_timeout_error.ts.out
error: Uncaught Error: foo
  throw new Error("foo");
        ^
    at [WILDCARD]/set_timeout_error.ts:2:9
    at [WILDCARD]
